--- a/tutorialsHitesh&Harry/style.css
+++ b/tutorialsHitesh&Harry/style.css
@@ -3,7 +3,7 @@ body {
   color: rgb(255, 255, 255);
 }
 
-.parent, .container .nav-list {
+.color-picker-container .list-container, .parent, .container .nav-list {
   display: flex;
 }
 
@@ -22,4 +22,23 @@ body {
 }
 .parent .week-day:hover {
   color: green;
+}
+
+.color-picker-container .list-container .list-item {
+  border: 1px solid black;
+  height: 75px;
+  width: 75px;
+  display: inline-block;
+}
+.color-picker-container .list-container .red {
+  background-color: red;
+}
+.color-picker-container .list-container .green {
+  background-color: green;
+}
+.color-picker-container .list-container .blue {
+  background-color: yellow;
+}
+.color-picker-container .list-container .white {
+  width: 75px;
 }/*# sourceMappingURL=style.css.map */
