--- a/tutorialsHitesh&Harry/style.css
+++ b/tutorialsHitesh&Harry/style.css
@@ -41,4 +41,13 @@ body {
 }
 .color-picker-container .list-container .white {
   width: 75px;
+}
+
+h1 {
+  color: gold;
+}
+
+.event-img {
+  height: 300px;
+  width: 600px;
 }/*# sourceMappingURL=style.css.map */
