--- a/tutorialsHitesh&Harry/style.css
+++ b/tutorialsHitesh&Harry/style.css
@@ -50,4 +50,27 @@ h1 {
 .event-img {
   height: 300px;
   width: 600px;
+}
+
+* {
+  margin: 25px;
+  box-sizing: border-box;
+}
+
+.grandparent {
+  height: 350px;
+  width: 350px;
+  border: 2px solid red;
+}
+
+.parent {
+  height: 250px;
+  width: 250px;
+  border: 2px solid blue;
+}
+
+.child {
+  height: 150px;
+  width: 150px;
+  border: 2px solid green;
 }/*# sourceMappingURL=style.css.map */
