--- a/tutorialsHitesh&Harry/style.scss
+++ b/tutorialsHitesh&Harry/style.scss
@@ -70,3 +70,22 @@ h1{
     height: 300px;
     width: 600px;
 }
+*{
+    margin: 25px;
+    box-sizing: border-box;
+}
+.grandparent{
+    height: 350px;
+    width: 350px;
+    border: 2px solid red;
+}
+.parent{
+    height: 250px;
+    width: 250px;
+    border: 2px solid blue;
+}
+.child{
+    height: 150px;
+    width: 150px;
+    border: 2px solid green;
+}
