--- a/project1/projects.scss
+++ b/project1/projects.scss
@@ -1,4 +1,11 @@
 body{
     background: #294a54;
-    color: aliceblue;
+    color: rgb(255, 255, 255);
+    font-family: 'roboto',sans-serif;
+    display: flex;
+    flex-direction: column;
+    margin: 0px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
 }
