--- a/learnDemo/style.css
+++ b/learnDemo/style.css
@@ -1,4 +1,5 @@
 body{
+
     background: #000;color: aliceblue;
 }
 a{
@@ -27,3 +28,33 @@ input[type="text"]::placeholder{
 select{
     color: aqua;
 }
+
+.d{
+    border: 2px solid;
+    display: block;
+    width: 100px;
+}
+.dropdown{
+    position: relative;
+}
+
+.dropdown-list{
+    display: none;
+    z-index: 111;
+
+}
+.dropdown:hover .dropdown-list{
+    display: inline-block;
+   }
+   @media screen and (min-width: 480px) and (max-width: 768px){ /*use to inbetween the pix */
+    body{
+        background: red;
+    }
+   }
+.flex-item
+{
+    display: flex;
+    flex-direction: row;
+}
+/* The flex property is a shorthand property for the flex-grow, flex-shrink, and flex-basis properties.
+style="flex: 0 0 200px" */
