--- a/learnDemo/style.css
+++ b/learnDemo/style.css
@@ -1,6 +1,10 @@
+:root{
+    --primiary-color: red;
+}
+
 body{
 
-    background: #000;color: aliceblue;
+    background: #0e313b;color: aliceblue;
 }
 a{
     color:aquamarine ;
