Consditions and loop for-in for-of

--- a/JS_revision_CodeOrChaipart2/style.scss
+++ b/JS_revision_CodeOrChaipart2/style.scss
@@ -1,8 +1,12 @@
 *{
     margin: 0px;
     padding: 0px;
+
 }
 body{
     background: #000e0d;
     color: antiquewhite;
+}
+p{
+    font-size: 20px;
 }
