--- a/JS_revision_CodeOrChaipart2/style.css
+++ b/JS_revision_CodeOrChaipart2/style.css
@@ -10,4 +10,12 @@ body {
 
 p {
   font-size: 20px;
+}
+
+.ul-list {
+  border: 1px solid;
+}
+.ul-list li {
+  font-size: 20px;
+  background: #461414;
 }/*# sourceMappingURL=style.css.map */
