--- a/JS_revision_CodeOrChaipart2/style.scss
+++ b/JS_revision_CodeOrChaipart2/style.scss
@@ -10,3 +10,10 @@ body{
 p{
     font-size: 20px;
 }
+.ul-list{
+    border: 1px solid;
+    li{
+        font-size: 20px;
+        background:  #461414;
+    }
+}
