Project change the color with start and stop Interval butttn, settimeout

--- a/JS_revision_CodeOrChaipart2/style.scss
+++ b/JS_revision_CodeOrChaipart2/style.scss
@@ -4,7 +4,7 @@
 
 }
 body{
-    background: #000e0d;
+    background: #000e0d;                                                                                                                                                                
     color: antiquewhite;
 }
 p{
@@ -16,4 +16,12 @@ p{
         font-size: 20px;
         background:  #461414;
     }
+}
+#clear{
+    font-size: 20px;
+    color: yellow;
+    background: #353535;
+    border: 0px;
+    padding: 5px;
+    border-radius: 14PX;
 }
