--- a/JS_revision_CodeOrChaipart2/style.css
+++ b/JS_revision_CodeOrChaipart2/style.css
@@ -18,4 +18,13 @@ p {
 .ul-list li {
   font-size: 20px;
   background: #461414;
+}
+
+#clear {
+  font-size: 20px;
+  color: yellow;
+  background: #353535;
+  border: 0px;
+  padding: 5px;
+  border-radius: 14PX;
 }/*# sourceMappingURL=style.css.map */
