Project identify the keyDown and call(), apply()

--- a/JS_revision_CodeOrChaipart2/style.scss
+++ b/JS_revision_CodeOrChaipart2/style.scss
@@ -25,3 +25,15 @@ p{
     padding: 5px;
     border-radius: 14PX;
 }
+table {
+    border-collapse: collapse;
+    width: 300px;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+th {
+    background-color: #f2f2f2;
+}
