--- a/JS_revision_CodeOrChaipart2/style.css
+++ b/JS_revision_CodeOrChaipart2/style.css
@@ -27,4 +27,19 @@ p {
   border: 0px;
   padding: 5px;
   border-radius: 14PX;
+}
+
+table {
+  border-collapse: collapse;
+  width: 300px;
+}
+
+th, td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+th {
+  background-color: #f2f2f2;
 }/*# sourceMappingURL=style.css.map */
